# Epistemic-Robustness-Environment-for-LLMs

./: .gitignore  README.md  __init__.py  inference.py  md  openenv.yaml  pre_validation_script.sh  pyproject.toml  run_inference.bat
openenv_my_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: __init__.py  app.py  baseline.py  claims.py  client.py  environment.py  hallucination_task.py  inference.py  models.py  overclaiming_task.py  requirements.txt  reward.py  smart_reward.py  tasks.py
