# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-epistemic-robustness"
version = "0.1.0"
description = "Epistemic Robustness environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies (derived from your requirements.txt)
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Corrected to point to app.py inside the server directory
# This enables running via: uv run server
server = "server.app:main"

[tool.setuptools]
include-package-data = true
# Corrected package names to match your folder structure
packages = ["server"]
package-dir = { "server" = "server" }
